# DailyProgrammer

./: .gitignore  Challenge # 242 [Intermediate] VHS recording problem.hs  Challenge # 246 [Intermediate] Letter Splits.hs  Challenge #174 [Hard] Convex Hull Problem.hs  Challenge #183 [Easy] Semantic Version Sort.hs  Challenge #191 [Easy] Word Counting.hs  Challenge #195 [Easy] Symbolic Link Resolution.hs  Challenge #195 [Intermediate] Math Dice.hs  Challenge #198 [Easy] Words with Enemies.hs  Challenge #198 [Intermediate] Base-Negative Numbers.hs  Challenge #201 [Easy] Counting the Days until.hs  Challenge #202 [Easy] I AM BENDER. PLEASE INSERT GIRDER..hs  Challenge #204 [Hard] Addition chains  Challenge #204 [Hard] Addition chains.hs  Challenge #204 [Intermediate] It's like regular binary, only way more hype.hs  Challenge #205 [Hard] DNA and Protein Sequence Alignment.hs  Challenge #205 [Intermediate] RPN.hs  Challenge #206 [Easy] Recurrence Relations, part 1  Challenge #206 [Easy] Recurrence Relations, part 1.hs  Challenge #206 [Hard] Recurrence Relations, part 2.hs  Challenge #206 [Intermediate] Maximizing Crop Irrigation.hs  Challenge #210 [Hard] Loopy Robots  Challenge #211 [Easy] The Name Game  Challenge #211 [Hard] Hungry puppies.hs  Challenge #212 [Hard] Reverse Maze Pathfinding.hs  Challenge #213 [Easy] Cellular Automata: Rule 90.hs  Challenge #213 [Easy] Pronouncing Hex.hs  Challenge #213 [Intermediate] The Lazy Typist.hs  Challenge #214 [Hard] Chester, the greedy Pomeranian.hs  Challenge #215 [Intermediate] Validating sorting networks.hs  Challenge #218 [Easy] Making numbers palindromic.hs  Challenge #220 [Hard] Substitution Cryptanalysis.hs  Challenge #222 [Easy] Balancing Words.hs  (+68 more)
(+24 files in other folders)
