name:           DailyProgrammer
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Joshua.Belanger

executable Challenge183
  hs-source-dirs:  src
  main-is:         Challenge183.hs
  build-depends:   
                   base >= 4,
                   text >=1.2.0 && <1.3,
                   attoparsec >=0.12.1 && <0.13
  ghc-options:     -Wall
  other-modules:   Challenge183

library 
  build-depends:   base >= 4
  hs-source-dirs:  src
  ghc-options:     -Wall

