name:           DailyProgrammer
version:        0.1
cabal-version:  >= 1.10
build-type:     Simple
author:         Joshua Belanger
license:        MIT
license-file:   LICENSE
copyright:      2014
homepage:       https://github.com/jcbelanger/DailyProgrammer

executable Challenge183
  hs-source-dirs:  src
  main-is:         Challenge183.hs
  build-depends:   
                   base >= 4,
                   text >=1.2.0 && <1.3,
                   attoparsec >=0.12.1 && <0.13
  ghc-options:     -Wall
  other-modules:   Challenge183

source-repository head
  type:      git
  location:  https://github.com/jcbelanger/DailyProgrammer

test-suite Challenge183Suite
  type:            exitcode-stdio-1.0
  main-is:         Challenge183Suite.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4, HTF > 0.9,
                   text >=1.2.0 && <1.3,
                   attoparsec >=0.12.1 && <0.13
  other-modules:   
                  Challenge183,
                  Challenge183Test
  hs-source-dirs:  
                  test,
                  src

